Fix icon and letter spacing

--- a/src/flask/static/css/main.css
+++ b/src/flask/static/css/main.css
@@ -215,6 +215,7 @@ a {
     vertical-align: middle;
     margin-left: 2vw;
     display: block;
+    letter-spacing: normal;
 }
 
 
